# simple_embedded_system

./: README.md
.github/workflows/: esp32-c3-devkitc-02-rust-bm.yml  micropython_esp32.yml  stm32_nucleo_f446re_zephyr.yaml  stm32_nucleo_f446re_zephyr.yml
esp32-c3-devkit-c-02-rust-bm/: diagram.json
esp32-c3-devkit-c-02-rust-bm/src/: main.rs
esp32-c3-devkitc-02-rust-bm/: Cargo.toml  diagram.json  wokwi.toml
esp32-c3-devkitc-02-rust-bm/src/: main.rs
esp32-c3-devkitc-02-rust-bm/wokwi/: diagram.json  test_scenario.yaml  wokwi.toml
esp32-c3-devkitc-02-rust-bm/wokwi/chips/: dht20.chip.c  dht20.chip.json  dht20.chip.wasm
micropython_esp32/: README.md  driver_dht20.py  little_fs_generate.py  main.py  requirements.txt  test_dht20_driver.py
micropython_esp32/wokwi/: diagram.json  test_scenario.yaml  wokwi.toml
micropython_esp32/wokwi/chips/: Makefile  dht20.chip.wasm
stm32_nucleo_f446re_zephyr/: .gitignore  prj.conf  west.yml
stm32_nucleo_f446re_zephyr/boards/: nrf52840dk_nrf52840.overlay  nucleo_c031c6.overlay  nucleo_f446re.overlay
stm32_nucleo_f446re_zephyr/src/: main.c
stm32_nucleo_f446re_zephyr/wokwi/: diagram.json  wokwi.toml
stm32_nucleo_f446re_zephyr/wokwi/chips/: dht20.chip.c  dht20.chip.json
